--- a/src/main/resources/templates/WebQuanLy/voucher-detail.html
+++ b/src/main/resources/templates/WebQuanLy/voucher-detail.html
@@ -17,7 +17,7 @@
             --success-color: #28a745;
             --danger-color: #dc3545;
             --warning-color: #ffc107;
-            --info-color: #17a2b8;
+            --info-color: #47e808;
             --light-gray: #f8f9fa;
             --border-color: #dee2e6;
             --glass-bg: rgba(255, 255, 255, 0.95);
